tests/ui/rfc-2632-const-trait-impl/gate.stderr
error[E0658]: const closures are experimental
  --> $DIR/gate.rs:3:6
   |
LL |     (const || {})();
   |      ^^^^^^^^^^^
   |
   = note: see issue #106003 <https://github.com/rust-lang/rust/issues/106003> for more information
   = help: add `#![feature(const_closures)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
