tests/ui/rfc-2632-const-trait-impl/gate.rs
// gate-test-const_closures
fn main() {
    (const || {})();
    //~^ ERROR: const closures are experimental
}
